K8S/monitor/monitor-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitor
spec:
  rules:
  - host: prometheus.k8s.arcter.org.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitor-kube-prometheus-st-prometheus
            port: 
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-internal
  namespace: monitor
spec:
  rules:
  - host: grafana.k8s.arcter.org.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitor-grafana
            port: 
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitor
spec:
  rules:
  - host: grafana.k8s.arcter.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitor-grafana
            port: 
              number: 3000
